--- a/index.html
+++ b/index.html
@@ -83,11 +83,7 @@
             outline-offset: -2px;
         }
     </style>
-    <script>
-        var indexScript = document.createElement("script");
-        indexScript.setAttribute("src", "/dist/js/index.js?" + new Date().getTime());
-        document.head.appendChild(indexScript);
-    </script>
+    <script src="/dist/js/index.js?1473698446065"></script>
 </head>
 <body>
 </body>
