Add elastic scrolling for select2

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
             outline: crimson auto 5px;
             outline-offset: -2px;
         }
+
+        .select2-results__options {
+            overflow-y: scroll;
+            -webkit-overflow-scrolling: touch;
+        }
     </style>
-    <script src="/dist/js/index.js?1473698446065"></script>
+    <script src="/dist/js/index.js?1473698504540"></script>
 </head>
 <body>
 </body>
